--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for PPIx-Shorthand
 
+1.1.0  2008-05-11
+
+    Added plurals of the class names.
+
 1.0.0  2008-03-30
 
     Initial release.
