--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for PPIx-Shorthand
 
+1.2.0  2010-03-14
+
+    Update to match PPI 1.208.  Note that this makes the incompatible change to
+    match the renaming of PPI::Structure::ForLoop to PPI::Structure::For.
+
 1.1.1  2008-05-28
 
     Declare dependency upon Exporter 5.57.
